--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5614,6 +5614,10 @@ button.close {
   .modal-sm {
     width: 300px;
   }
+
+  .modal-md {
+    width: 400px;
+  }
 }
 @media (min-width: 992px) {
   .modal-lg {
